--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -94,6 +94,18 @@ body .n-card {
   transition: all .2s ease-in-out;
 }
 
+body .proCard {
+  border-radius: 4px;
+
+  .n-card__content {
+    padding: 16px;
+
+    &:first-child {
+      padding-top: 16px;
+    }
+  }
+}
+
 .n-layout-page-header {
   margin: 0 -10px;
 }
