--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,5 +1,4 @@
-@import "tailwindcss/base";
-
-@import "tailwindcss/components";
-
-@import "tailwindcss/utilities";
+/*! @import */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
