--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -94,6 +94,10 @@ body .n-card {
   transition: all .2s ease-in-out;
 }
 
+body .n-icon{
+  vertical-align:middle;
+}
+
 body .proCard {
   border-radius: 4px;
 
