fix Bug or add example

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -110,6 +110,11 @@ body .proCard {
   }
 }
 
+//body .proCardTabs{
+//  .n-card__content{ padding-top: 3px}
+//  .n-card__content:first-child{ padding-top: 3px}
+//}
+
 .n-layout-page-header {
   margin: 0 -10px;
 }
