Fixes bug add baseModal | baseForm 组件

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -110,6 +110,10 @@ body .proCard {
   }
 }
 
+body .n-modal{
+  border-radius: 6px;
+}
+
 //body .proCardTabs{
 //  .n-card__content{ padding-top: 3px}
 //  .n-card__content:first-child{ padding-top: 3px}
