支持 Vue 3.2.x 语法升级为，script setup

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -45,7 +45,7 @@ a:active, a:hover {
   text-decoration: none;
 }
 
-/*滚动条凹槽的颜色，还可以设置边框属性 */
+/* 滚动条凹槽的颜色，还可以设置边框属性 */
 *::-webkit-scrollbar-track-piece {
   background-color: #f8f8f8;
   -webkit-border-radius: 2em;
@@ -53,22 +53,22 @@ a:active, a:hover {
   border-radius: 2em;
 }
 
-/*滚动条的宽度*/
+/* 滚动条的宽度 */
 *::-webkit-scrollbar {
   width: 9px;
   height: 9px;
 }
 
-/*滚动条的设置*/
+/* 滚动条的设置 */
 *::-webkit-scrollbar-thumb {
-  background-color: #dddddd;
+  background-color: #ddd;
   background-clip: padding-box;
   -webkit-border-radius: 2em;
   -moz-border-radius: 2em;
   border-radius: 2em;
 }
 
-/*滚动条鼠标移上去*/
+/* 滚动条鼠标移上去 */
 *::-webkit-scrollbar-thumb:hover {
   background-color: #bbb;
 }
