--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -127,3 +127,9 @@ body .n-modal {
 .n-layout-page-header {
   margin: 0 -10px;
 }
+
+img, video{
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
